--- a/protofolio.html
+++ b/protofolio.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
-
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width,intial-scale=1.0">
   <title>document</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -144,7 +145,7 @@
       <div class="card" style="width: 18rem;">
         <img src="photo.png" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title" style="padding-top: 20px;"><b><u>Image Gallery</u></b></h5>
+          <h5 class="card-title"><b><u>Image Gallery</u></b></h5>
           <p class="card-text">created by using all flex display properties.</p>
           <a href="#" class="btn btn-primary">Read more</a>
         </div>
@@ -163,10 +164,8 @@
       <input class="btn btn-primary" type="submit" value="Submit">
     </div>
   </section>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
 </body>
-
 </html>
